hphp/hack/test/typecheck/expression_trees/async_generator.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  ExampleDsl`async () ==> { yield 1; }`;
}
